--- a/.gitignore
+++ b/.gitignore
@@ -56,7 +56,8 @@ package.json
 # Virtual Environment by Kuma
 /.venv/
 
+# kumas ignore file 
+/custom-addons/hr_grade_rank/
+/custom-addons/oh_appraisal/
+/visualize/
 
-# Kumas Temp file
-/custom-addons/hr_grade_rank
-/custom-addons/oh_appraisal
