basic file model and view added

--- a/.gitignore
+++ b/.gitignore
@@ -59,5 +59,5 @@ package.json
 # kumas ignore file 
 /custom-addons/hr_grade_rank/
 /custom-addons/oh_appraisal/
+/custom-addons/tk_overtime_request/
 /visualize/
-
