gitignore update for kuma

--- a/.gitignore
+++ b/.gitignore
@@ -61,3 +61,5 @@ package.json
 /custom-addons/oh_appraisal/
 /custom-addons/tk_overtime_request/
 /visualize/
+/custom-addons/izi_data/
+/custom-addons/report_xlsx/
