--- a/ospm.conf
+++ b/ospm.conf
@@ -4,5 +4,5 @@ db_host = localhost
 db_port = 5432
 db_user = finance
 db_password = Simon@1234
-addons_path = /ospm/addons, /ospm/custom-addons
+addons_path = addons,custom-addons
 xmlrpc_port = 8282   
